--- a/views/stories/add.ejs
+++ b/views/stories/add.ejs
@@ -3,14 +3,14 @@
     <form action="/stories" method="POST" class="col s12">
         <div class="row">
             <div class="input-field">
-                <input type="text" id="title" name="title">
+                <input type="text" id="title" name="title" required>
                 <label for="title">Title</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field">
-                <select id="status" name="status">
+                <select id="status" name="status" required>
                     <option value="Public" selected>Public</option>
                     <option value="Private">Private</option>
                 </select>
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="input-field">
                 <h5>Tell Us Your Story:</h5>
-                <textarea id="body" name="body"></textarea>
+                <textarea id="body" name="body" required></textarea>
             </div>
         </div>
 
