--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,3 +21,48 @@ p{
 .img-small{
   width: 180px;
 }
+
+.chip {
+  display: inline-block;
+  padding: 0 25px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 50px;
+  border-radius: 25px;
+  background-color: #f1f1f1;
+}
+
+.chip img {
+  float: left;
+  margin: 0 10px 0 -25px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.top-buffer { margin-top:20px; }
+
+.rel {
+  position: relative;
+  height:300px;
+  width: 600px;
+}
+.read-more {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.background {
+  background-image: url("http://placehold.it/600x300");
+  height: 300px;
+  width: 600px;
+  
+}
+.table td {
+  vertical-align: middle;
+}
+
+table tr {
+  height: 70px;
+}
+
