--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,7 +9,8 @@
   <title>Memory</title>
 
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,6 +25,7 @@
 
   <%- include("../partials/navbar") %>
     <div class="container">
+     <div><span>&nbsp;</span></div>
       <%- body %>
         <%- include("../partials/add-btn") %>
     </div>
@@ -34,38 +36,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
 
     </script>
-    <script>
-      document.addEventListener('DOMContentLoaded', function () {
-        var elems = document.querySelectorAll('.validate');
-        console.log(elems);
-        var options = {
-          classes: {
-            invalid: 'invalid',
-            valid: 'valid'
-          },
-          focusInvalid: true,
-          onSubmit: function () {
-            console.log('Form submitted!');
-          },
-          onValid: function () {
-            console.log('Field validated successfully!');
-          },
-          onInvalid: function () {
-            console.log('Field validation failed!');
-          },
-          onSuccess: function () {
-            console.log('Form validated successfully!');
-          },
-          onError: function () {
-            console.log('Form validation failed!');
-          }
-        };
-        console.log(M.FormValidation)
-        console.log(M.FormValidation)
-        //var instances = M.FormValidation.init(elems, options);
-      });
-    </script>
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.14.1/ckeditor.js"
       integrity="sha512-P4rrEImABBYtBFdmrFPqF8rjh8iiRiupfQ4KLrBCL8dAivLiM2nh+1bJQeMb2ZglmIlGZdfTtgGdXH6H/hGVeg=="
