--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,29 @@
-<h3><i class="fas fa-book-reader"></i> Memory</h3>
-<div class="section">
-  <p class="lead">Create public or private memories of your life</p>
-</div>
-<div class="section">
-  <a href="/auth/google/" class="btn red darken-1">  <i class="fab fa-google left"></i>Login with Google</a>
 
+<div class="container mt-3">
+  <div class="row">
+    <div class="col">
+      <h3 class="text-center"><i class="fas fa-book-reader"></i>Memory</h3>
+    </div>
+  </div>
+</div>
+
+<div class="container mt-3">
+  <div class="row">
+    <div class="col">
+      <p class="text-center">Create public or private memories of your life</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="container mt-3">
+  <div class="row">
+    <div class="col">
+      <p class="text-center">
+      <a href="/auth/google/" class="btn btn-danger">
+        <i class="fab fa-google me-2" ></i>Login with Google
+      </a>
+    </p>
+    </div>
+  </div>
 </div>
