--- a/views/partials/add-btn.ejs
+++ b/views/partials/add-btn.ejs
@@ -1,3 +1,3 @@
-<div class="fixed-action-btn">
-  <a href="/stories/add" class="btn-floating btn-large waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+<div class="position-fixed bottom-0 end-0 mb-5 me-5 btn-rounded">
+  <a href="/stories/add" class="btn btn-lg btn-danger btn-floating  btn-rounded"><i class="fas fa-plus"></i></a>
 </div>
