--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,17 +1,21 @@
-<nav>
-  <div class="nav-wrapper black">
-    <a href="#!" class="brand-logo">Memory</a>
-    <a href="#" data-target="mobile-demo" class="sidenav-trigger"> <i class="fas fa-bars"></i></a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="/stories">Stories</a></li>
-      <li><a href="/dashboard">Dashboard</a></li>
-      <li><a href="/auth/logout">Logout</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Memory</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/stories">Stories</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/dashboard">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/auth/logout">Logout</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
-
-<ul class="sidenav" id="mobile-demo">
-  <li><a href="/stories">Stories</a></li>
-      <li><a href="/dashboard">Dashboard</a></li>
-      <li><a href="/auth/logout">Logout</a></li>
-</ul>
