--- a/views/stories/edit.ejs
+++ b/views/stories/edit.ejs
@@ -2,37 +2,35 @@
 <div class="row">
     <form action="/stories/edit/<%=story._id%>?_method=PUT" method="POST" class="col s12">
       <br>
-        <div class="row">
-            <div class="input-field">
-                <input type="text" id="title" name="title" value="<%= story.title %>">
-                <label for="title">Title</label>
+      <div class="mb-3">
+        <label for="title">Title</label>
+        <input type="text" class="form-control id="title" name="title" value="<%= story.title %>">
+                
             </div>
-        </div>
 
-        <div class="row">
-            <div class="input-field">
-                <select id="status" name="status">
+
+            <div class="mb-3">
+                Status
+                <select class="form-select form-select"  name="status">
                     <% for(let status of statusList){ %>
                       <option value="<%= status %>"  <%= status==story.status ? 'selected': '' %>><%=status%> </option>
                       <% } %>
-
                 </select>
-                <label for="status">Status</label>
+    
             </div>
-        </div>
+       
 
-        <div class="row">
-            <div class="input-field">
+            <div class="mb-3">
                 <h5>Tell Us Your Story:</h5>
                 <textarea id="body" name="body"><%= story.body %></textarea>
-            </div>
+        
         </div>
 
      
-          <button class="btn waves-effect waves-light" type="submit" name="action">Edit
+          <button class="btn btn-primary" type="submit" name="action">Edit
             
           </button>
-            <a href="/dashboard" class="btn waves-effect waves-light red">Cancel</a>
+            <a href="/dashboard" class="btn btn-danger">Cancel</a>
   
     </form>
 </div>
