--- a/views/stories/edit.ejs
+++ b/views/stories/edit.ejs
@@ -1,36 +1,53 @@
 <h3>Edit Story</h3>
 <div class="row">
-    <form action="/stories/edit/<%=story._id%>?_method=PUT" method="POST" class="col s12">
-      <br>
-      <div class="mb-3">
-        <label for="title">Title</label>
-        <input type="text" class="form-control id="title" name="title" value="<%= story.title %>">
-                
-            </div>
+  <form action="/stories/edit/<%=story._id%>?_method=PUT" method="POST" class="validated-form" novalidate
+    onsubmit="return validateForm()">
+    <br>
+    <div class="mb-3">
+      <label for="title">Title</label>
+      <input type="text" class="form-control id=" title" name="title" value="<%= story.title %>" required>
+      <div class="valid-feedback">Looks Good</div>
+      <div class="invalid-feedback">
+        Please enter title
+      </div>
+    </div>
 
 
-            <div class="mb-3">
-                Status
-                <select class="form-select form-select"  name="status">
-                    <% for(let status of statusList){ %>
-                      <option value="<%= status %>"  <%= status==story.status ? 'selected': '' %>><%=status%> </option>
-                      <% } %>
-                </select>
-    
-            </div>
-       
+    <div class="mb-3">
+      Status
+      <select class="form-select form-select" name="status" required>
+        <% for(let status of statusList){ %>
+          <option value="<%= status %>" <%=status==story.status ? 'selected' : '' %>><%=status%>
+          </option>
+          <% } %>
+      </select>
+      <div class="valid-feedback">Looks Good</div>
+      <div class="invalid-feedback">
+        Please enter title
+      </div>
+    </div>
 
-            <div class="mb-3">
-                <h5>Tell Us Your Story:</h5>
-                <textarea id="body" name="body"><%= story.body %></textarea>
-        
-        </div>
+</div>
 
-     
-          <button class="btn btn-primary" type="submit" name="action">Edit
-            
-          </button>
-            <a href="/dashboard" class="btn btn-danger">Cancel</a>
-  
-    </form>
+
+<div class="mb-3">
+  <h5>Tell Us Your Story:</h5>
+  <textarea id="body" name="body" required><%= story.body %></textarea>
+
+  <div class="valid-feedback" id="valid">
+
+  </div>
+  <div class="invalid-feedback" id="invalid">
+
+  </div>
+
+</div>
+
+
+<button class="btn btn-primary" type="submit" name="action">Edit
+
+</button>
+<a href="/dashboard" class="btn btn-danger">Cancel</a>
+
+</form>
 </div>
