--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -1,61 +1,65 @@
-
-
-<% if(isSearchEnabled)  {%>
+<% if(isSearchEnabled) {%>
   <h3>
-          <% if(stories.length===1)  {%>
-            Total <%= stories.length %> story found 
+    <% if(stories.length===1) {%>
+      Total <%= stories.length %> story found found containing "<%=query%>"
           <%} else {%>
-            Total <%= stories.length %> stories found 
-          <%}%>
+            Total <%= stories.length %> stories found containing "<%=query%>"
+                <%}%>
   </h3>
-          <%} else {%>
-          <h3>Public Stories</h3>
-<%}%>
-
- <form class="d-flex mx-auto my-2 my-lg-0" action="/stories/search" method="GET">
-  <% if(isSearchEnabled) { %>
-            <input class="form-control me-2" type="query" name="query" value="<%=query%>" placeholder="Search" aria-label="q">
-            <% } else { %>
-              <input class="form-control me-2" type="query" name="query" placeholder="Search" aria-label="q">
-   <% }%>
- 
-  <button class="btn btn-outline-success" type="submit">Search</button>
-</form>
-<br> <br>
-<div class="container">
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <% if(stories.length!=0)  { %>  
-    <% for(let story of stories) { %>
-  <div class="col">
-    <div class="card h-100">
-      <div class="card-body">
-        <%- editIcon(story.user, loggedInUser, story._id) %>
-        <h5 class="card-title fw-bold"><%= story.title %></h5>
-        <p class="card-text"><%- stripTags(truncate(story.body,100)) %></p>
-        <div class="chip">
-          <img src="<%= story.user.image %>" alt="" class="chip-img"> 
-          <span class="chip-text"><a style="text-decoration:none" href="/stories/user/<%= story.user._id %>"><%= story.user.firstName %></a></span>
-        </div>
-        <hr class="my-3">
-        <div class="mt-3">
-        
-          <a href="/stories/<%= story._id %>" class="btn btn-primary d-block">Read More</a>
-           
-        
-        </div>
-      </div>
-    </div>
-  </div>
-  <% } %>
-  <% } else {  %>
-
-    <% if(isSearchEnabled)  {%>
-    
-    <%} else {%>
-    <p>You have not created stories</p>
+  <%} else {%>
+    <h3>Public Stories</h3>
     <%}%>
 
-   
-  <% } %>
-</div>
-</div>
+      <form class="d-flex mx-auto my-2 my-lg-0" action="/stories/search" method="GET">
+        <% if(isSearchEnabled) { %>
+          <input class="form-control me-2" type="query" name="query" value="<%=query%>" placeholder="Search"
+            aria-label="q">
+          <% } else { %>
+            <input class="form-control me-2" type="query" name="query" placeholder="Search" aria-label="q">
+            <% }%>
+
+              <button class="btn btn-success" type="submit">Search</button>
+      </form>
+      <br> <br>
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <% if(stories.length!=0) { %>
+            <% for(let story of stories) { %>
+              <div class="col">
+                <div class="card h-100">
+                  <div class="card-body">
+                    <%- editIcon(story.user, loggedInUser, story._id) %>
+                      <h5 class="card-title fw-bold">
+                        <%= story.title %>
+                      </h5>
+                      <p class="card-text"><%- truncate(stripTags(story.body),120) %></p>
+                      <div class="chip">
+                        <img src="<%= story.user.image %>" alt="" class="chip-img">
+                        <span class="chip-text"><a style="text-decoration:none"
+                            href="/stories/user/<%= story.user._id %>">
+                            <%= story.user.firstName %>
+                          </a></span>
+                      </div>
+                      <hr class="my-3">
+                      <div class="mt-3">
+
+                        <a href="/stories/<%= story._id %>" class="btn btn-primary d-block">Read More</a>
+
+
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <% } %>
+                <% } else { %>
+
+                  <% if(isSearchEnabled) {%>
+
+                    <%} else {%>
+                      <p>You have not created stories</p>
+                      <%}%>
+
+
+                        <% } %>
+        </div>
+      </div>
