--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -1,49 +1,31 @@
-<!-- <div class="row">
-  <div class="col s12 m8">
-      <h3><%=story.title%>
-          <small> <%- editIcon(story.user, loggedInUser, story._id,false) %></small>
-      </h3>
-      <div class="card story">
-          <div class="card-content">
-              <span class="card-title"><%= formatDate(story.createdAt,'Do MMMM, YYYY h:mm:ss a') %></span>
-             <%-stripTags(story.body) %>
-          </div>
-      </div>
-  </div>
-  <div class="col s12 m4">
-      <div class="card center-align">
-          <div class="card-content">
-              <span class="card-title"><%=story.user.displayName%></span>
-              <img src="<%=story.user.image%>" class="circle responsive-img img-small">
-          </div>
-          <div class="card-action">
-              <a href="/stories/user/<%=story.user._id%>">More From <%=story.user.firstName%></a>
-          </div>
-      </div>
-  </div>
-</div>
- -->
 <div class="row">
     <div class="col-12 col-md-8">
-        <h3><%=story.title%>
-            <small> <%- editIcon(story.user, loggedInUser, story._id,false) %></small>
+        <h3>
+            <%=story.title%>
+                <small> <%- editIcon(story.user, loggedInUser, story._id,false) %></small>
         </h3>
         <div class="card story">
             <div class="card-body">
-                <h5 class="card-title"><%= formatDate(story.createdAt,'Do MMMM, YYYY | h:mm:ss a') %></h5>
-                <p class="card-text"><%-stripTags(story.body) %></p>
+                <h5 class="card-title">
+                    <%= formatDate(story.createdAt,'Do MMMM, YYYY | h:mm:ss a') %>
+                </h5>
+                <p class="card-text"><%-(story.body) %></p>
             </div>
         </div>
     </div>
     <div class="col-12 col-md-4">
         <div class="card text-center">
             <div class="card-body">
-                <h5 class="card-title"><%=story.user.displayName%></h5>
+                <h5 class="card-title">
+                    <%=story.user.displayName%>
+                </h5>
                 <img src="<%=story.user.image%>" class="rounded-circle img-fluid img-small">
             </div>
             <div class="card-footer">
-                <a style="text-decoration:none;" href="/stories/user/<%=story.user._id%>">More From <%=story.user.firstName%></a>
+                <a style="text-decoration:none;" href="/stories/user/<%=story.user._id%>">More From
+                    <%=story.user.firstName%>
+                </a>
             </div>
         </div>
     </div>
-  </div> 
+</div>
