--- a/views/stories/index.ejs
+++ b/views/stories/index.ejs
@@ -1,7 +1,7 @@
 <% if(isSearchEnabled) {%>
   <h3>
     <% if(stories.length===1) {%>
-      Total <%= stories.length %> story found found containing "<%=query%>"
+      Total <%= stories.length %> story found containing "<%=query%>"
           <%} else {%>
             Total <%= stories.length %> stories found containing "<%=query%>"
                 <%}%>
