--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,6 @@
 <h3>Welcome <%=name%>
 </h3>
-<p>Here are your stories</p>
+
 
 <% if(stories.length!=0) { %>
   <table class="table table-striped  my-4">
@@ -42,5 +42,9 @@
 
   <% } else { %>
 
-    <p>You have not created stories</p>
+
+    <blockquote class="blockquote text-center">
+      <p class="mb-0">You have not any created stories.</p></p>
+      <footer class="blockquote-footer">Click on + icon to create one.</cite></footer>
+    </blockquote>
     <% } %>
