Added uploading image functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,3 +65,7 @@ p {
 table tr {
   height: 70px;
 }
+.carousel-control-next,
+.carousel-control-prev /*, .carousel-indicators */ {
+    filter: invert(100%);
+}
