Fixed image sizing issue

--- a/views/stories/show.ejs
+++ b/views/stories/show.ejs
@@ -40,6 +40,7 @@
     <div class="col-12 col-md-2">
         <div class="card text-center">
             <div class="card-body">
+                <h3>Posted by:</h3>
                 <h5 class="card-title">
                     <%=story.user.displayName%>
                 </h5>
