--- a/views/stories/edit.ejs
+++ b/views/stories/edit.ejs
@@ -51,13 +51,13 @@
 
 </div>
 
-<div class="mb-3">
+<div class="mb-3 div-btwn">
   <% story.images.forEach((img,i)=>{ %>
       <img src="<%=img.url%>" alt="" class="show-img img-thumbnail" width="800" height="600">
       <div class="form-check-inline"> 
         <input type="checkbox" id="img-<%=i%>" name="deleteImages[]" value="<%=img.fileName%>">
       </div>
-      <label for="img-<%=i%>">Delete</label> <br>
+      <label class="lab-btw" for="img-<%=i%>">Delete</label> <br>
     <%})%>
 
 </div>
