--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,4 +73,15 @@ table tr {
 .show-img{
   max-height: 600px;
   max-width: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.div-btwn{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
 }
